# clireader

./: .gitignore  README.rst  setup.cfg
clireader/: __init__.py  __main__.py  clireader.py  man.py
clireader/data/: manlike_formatting.man
docs/: requirements.rst
tests/: test_clireader.py  test_main.py  test_man.py
