[pycodestyle]
quiet = 1
ignore = E231,W503


[precommit]
# doctest_modules = {MODULES_WITH_DOCTESTS}
python_files = *
    clireader/*
    examples/*
    tests/*
rst_files = *
    docs/*
unit_tests = tests


[metadata]
name = clireader
version = 0.0.1
author = Paul J. Iutzi
author_email = pji@mac.com
description = A package for paging through text files from the command line.
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/pji/clireader
project_urls =
    Bug Tracker = https://github.com/pji/clireader/issues
classifiers = 
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent


[options]
zip_safe = False
package_dir =
    = .
packages = find:
python_requires = >= 3.10
install_requires = blessed

[options.entry_points]
console_scripts =
    clireader = clireader.__main__:parse_cli
